--- a/perl/site/lib/Mojo/Weixin.pod
+++ b/perl/site/lib/Mojo/Weixin.pod
@@ -152,6 +152,7 @@ Mojo::Weixin - A Weixin Client Framework base on Mojolicious
     account         #可选，默认值default, 每个客户端的标识，多账号登录时需要设置，用于区分不同客户端保存的cookie路径
     http_debug      #设置该参数，打印调试信息
     keep_cookie     #默认为1，0表示不保存登录cookie，1表示保存登录cookie方便下次直接恢复登录
+    send_interval   #默认为3s，全局发送消息时间间隔，间隔太小会导致消息发送频繁，可能有被封号的风险
 
     log_level       #默认级别为info，可以设置debug|info|warn|error|fatal
     log_path        #默认客户端输出内容打印到STDOUT 设置该参数可以将客户端输出重定向到文件
@@ -577,6 +578,10 @@ Mojo::Weixin - A Weixin Client Framework base on Mojolicious
     content     #消息内容
     format      #消息格式，包括 text|media|app 三类
 
+    code        #消息发送状态，0发送成功，非0发送失败
+    msg         #消息发送状态，字符串形式："发送成功","发送失败"
+    info        #消息发送状态的附加信息，比如发送失败的原因
+
     sender_id   #群消息中发送对象的id
     receiver_id #消息接收对象的id
     group_id    #群消息的群对象id
@@ -660,8 +665,8 @@ Mojo::Weixin - A Weixin Client Framework base on Mojolicious
 =head2 send_message 消息发送完成
 
     $client->on(send_message=>sub{
-        my($client,$msg,$status) = @_; #传给回调的参数是发送完毕的 消息对象 和 发送状态对象
-        if($status->is_success){
+        my($client,$msg) = @_; #传给回调的参数是发送完毕的 消息对象 和 发送状态对象
+        if($msg->is_success){
             print "消息" . $msg->id . "发送成功\n";
         }
         else{
@@ -1171,6 +1176,7 @@ CPAN文档可能比较旧或者表达的信息不够丰富，请参考github上A
         auth   => sub {my($param,$controller) = @_},    #可选，认证回调函数，用于进行请求鉴权
         post_api => 'http://xxxx',                      #可选，你自定义的接收消息上报接口
         post_event => 1,                                #可选，是否上报事件，为了向后兼容性，默认值为0
+        post_stdout => 0,                               #可选，上报数据是否打印到stdout，适合管道交互信息方式，默认0
         post_media_data => 1,                           #可选，是否上报经过base64编码的图片原始数据，默认值为1
         post_event_list => ['login','stop','state_change','input_qrcode'], #可选，上报事件列表
         #poll_api  => 'http://xxxx',                     #可选，从外网调用内网程序的api时需要使用到，默认不启用
