--- a/perl/site/lib/Mojo/Webqq.pod
+++ b/perl/site/lib/Mojo/Webqq.pod
@@ -414,12 +414,22 @@ Mojo::Webqq - A Webqq Client Framework base on Mojolicious
     keep_cookie       #默认为1，0表示不保存登录cookie，1表示保存登录cookie方便下次直接恢复登录
     disable_color     #默认为0，是否禁用终端彩色打印
     send_interval     #默认为3s，全局发送消息时间间隔，间隔太小会导致消息发送频繁，可能有被封号的风险
-    ignore_retcode    #对发送消息返回这些状态码不认为发送失败不重试,参数是一个数组引用，默认 [1202,100100]
-                      #设置示例 Mojo::Webqq->new(ignore_retcode=>[1202,100100]);
+    ignore_send_retcode #对发送消息返回这些状态码不认为发送失败不重试,参数是一个数组引用
+                        #设置示例 Mojo::Webqq->new(ignore_retcode=>[1202,100100]);
+                        #默认值 [1202,100100] 不清楚作用请不要随意设置
+
+    ignore_poll_retcode #对接收消息返回这些状态码不认为接收失败，不重新登录，避免频繁掉线
+                        #设置示例 Mojo::Webqq->new(ignore_retcode=>[102,109,110,1202,100012]);
+                        #默认值 [102,109,110,1202,100012] 不清楚作用请不要随意设置
 
     ignore_unknown_id #其他设备上自己发送的消息，在webqq上会以接受消息的形式再次接收到
                       #消息发送者是一个未知的id，非常影响很多功能的正常工作，该选项决定是否忽略掉这种消息
                       #默认值为 1
+    allow_message_sync #是否允许同步来自其他设备登录账号发送的消息 默认为0
+                       #由于webqq自身发送消息后也会收到服务端重复的消息
+                       #且没办法和来自其他设备的消息区分，会导致出现一些不期望的结果，比如某些插件会陷入死循环等
+                       #因此默认不开启消息同步，如果你只是用来irc聊天，则可以考虑开启此选项
+                       #可以同步来自其他设备的消息，体验会更好一些
 
     log_console     #打印到文件的同时也打印到屏幕，方便调试，默认 1
     log_level       #默认级别为info，可以设置debug|info|warn|error|fatal
@@ -448,6 +458,8 @@ Mojo::Webqq - A Webqq Client Framework base on Mojolicious
     is_update_friend    #是否定期更新好友信息，默认值 1
     is_update_discuss   #是否定期更新讨论组信息，默认值 1
     update_interval     #定时更新群组、好友、讨论组等信息的时间间隔，默认600秒
+
+    is_fetch_notice     #是否获取公告信息，默认值 1
 
     msg_ttl             #发送失败的消息，重试次数，默认是5
 
